# pong

./: CMakeLists.txt  readme.md
Data/shaders/: background.frag  background.vert  base.vert  net.frag  net.vert  streak.frag
cmake/: EmbedShader.cmake
include/: petrichor_math.h
src/: main.cpp
src/common/: petrichor_math.cpp
src/common/util/: colour.h
src/core/: app.cpp  app.h
src/core/graphics/renderer/: renderer.cpp  renderer.h
src/core/graphics/renderer/opengl/: opengl_impl.cpp  opengl_impl.h
src/core/graphics/renderer/opengl/shaders/: circle.frag  quad.frag  quad.vert  text.frag  text.vert
src/core/graphics/window/: window.cpp  window.h
src/core/scene/camera/: orthographic.cpp  orthographic.h  perspective.cpp  perspective.h
vendors/: CMakeLists.txt
vendors/glad/: CMakeLists.txt
vendors/glad/include/glad/: glad.h
vendors/glad/src/: glad.c
